Update file reading method in CodeParser
Refactor file reading to use Files.readString for better readability.