@@ -2,10 +2,10 @@ package src;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class CodeParser {
     public String parseFile(String filePath) throws IOException {   
-        return new String(Files.readAllBytes(Paths.get(filePath)));
+        return Files.readString(Path.of(filePath));
     }
 }
